syntax = "proto3";

package search;

import "google/protobuf/empty.proto";

option go_package = "yadro.com/course/proto/search";

message SearchRequest {
  string phrase = 1;
  uint32 limit = 2;
}

message ComicReply {
  uint32 id = 1;
  string url = 2;
}

message SearchReply {
  repeated ComicReply comics = 1;
  uint32 total = 2;
}

service Search {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc Find(SearchRequest) returns (SearchReply);
  rpc IndexedSearch(SearchRequest) returns (SearchReply);
}